# coffee-ledger

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: app.py
data/: .gitkeep
src/coffee_ledger/: __init__.py  errors.py  models.py  repository.py  service.py
tests/: conftest.py  test_app.py  test_persistence.py  test_reads.py  test_service.py  test_smoke.py  test_validation.py
